# gba-bitmap-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
demos/demo1-wireframes/: CMakeLists.txt
demos/demo1-wireframes/src/: main.cpp  wirescene.cpp  wirescene.h
demos/demo2-blender-import/: CMakeLists.txt  converter.js
demos/demo2-blender-import/meshes/: box.babylon  cylinder.babylon  octahedron.babylon  sphere.babylon  torus.babylon
demos/demo2-blender-import/src/: main.cpp  mesh.cpp  monkey.cpp  monkey.h
demos/demo3-textures/: CMakeLists.txt
demos/demo3-textures/src/: main.cpp  mesh.cpp  texturedata.h  texturescene.cpp  texturescene.h
engine/: CMakeLists.txt
engine/include/libgba-bitmap-engine/: camera.h  face.h  math.h  matrixfx.h  mesh.h  scene.h  sound_control.h  timer.h  vectorfx.h  vertex.h
engine/include/libgba-bitmap-engine/background/: text_stream.h
engine/include/libgba-bitmap-engine/gba/: tonc_video.h
engine/include/libgba-bitmap-engine/palette/: palette_manager.h
engine/include/libgba-bitmap-engine/renderer/: gba_engine.h  renderer.h
engine/include/libgba-sprite-engine/: GBAMatrix.h  camera.h  gba_engine.h  gbavector.h  math.h  matrixfx.h  mesh.h  scene.h  vectorfx.h  vectorpx.h
engine/include/libgba-sprite-engine/background/: text_stream.h
engine/include/libgba-sprite-engine/gba/: tonc_core.h  tonc_math_stub.h  tonc_video.h  toolbox.h
engine/include/libgba-sprite-engine/renderer/: gba_engine.h  renderer.h
engine/src/: gba_engine.cpp  gbavector.cpp  math.cpp  mesh.cpp  scene.cpp  sound_control.cpp  timer.cpp  vectorfx.cpp
engine/src/background/: text_stream.cpp  tonc_font.s
engine/src/gba/: tonc_bios.s  tonc_bmp8.cpp  tonc_memset.s
engine/src/palette/: combined_palette.cpp  palette_manager.cpp
engine/src/renderer/: gba_engine.cpp  pixelrenderer.cpp  raserizerrenderer.cpp  rasterizerrenderer.cpp  wirerenderer.cpp
test/: CMakeLists.txt  fixedpoinmathtest.cpp  gbamatrixtest.cpp  gbavectortest.cpp  matrixfxtest.cpp  palettetest.cpp  real_data.h  timertest.cpp  tonc_bios_stub.h  vectorfxtest.cpp
